--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>期末考看板系統 - 穩定版</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <style>
+        body { font-family: "Microsoft JhengHei", sans-serif; overflow: hidden; background-color: #f3f4f6; }
+        input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button { -webkit-appearance: none; margin: 0; }
+        .track-transition { transition: stroke-dashoffset 1s linear, stroke 0.5s ease; }
+        .animate-fade-in { animation: fadeIn 0.5s ease-out forwards; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+    </style>
+</head>
+<body>
+    <div id="root"></div>
 
+    <script type="text/babel">
+        const { useState, useEffect, useMemo } = React;
+
+        const DEFAULT_SCHEDULE = [
+            { type: 'break', start: '08:30', end: '08:40', label: '準備' },
+            { type: 'exam',  start: '08:40', end: '09:20', label: '第一節' },
+            { type: 'break', start: '09:20', end: '09:30', label: '下課' },
+            { type: 'exam',  start: '09:30', end: '10:10', label: '第二節' },
+            { type: 'break', start: '10:10', end: '10:30', label: '下課 (大)' },
+            { type: 'exam',  start: '10:30', end: '11:10', label: '第三節' },
+            { type: 'break', start: '11:10', end: '11:20', label: '收卷' }
+        ];
+
+        const App = () => {
+            const [now, setNow] = useState(new Date());
+            const [offset, setOffset] = useState(() => Number(localStorage.getItem('exam_clock_offset')) || 0);
+            const [schedule, setSchedule] = useState(() => JSON.parse(localStorage.getItem('exam_schedule_v3')) || DEFAULT_SCHEDULE);
+            const [examData, setExamData] = useState(() => JSON.parse(localStorage.getItem('exam_data_v3')) || {
+                subjects: ["國語", "數學", "英文"], shouldArrive: "", actualArrive: "", absentList: ""
+            });
+            const [messages, setMessages] = useState(() => JSON.parse(localStorage.getItem('exam_messages_v3')) || ["考卷記得寫姓名座號", "有問題舉手問老師"]);
+
+            useEffect(() => {
+                const timer = setInterval(() => setNow(new Date()), 1000);
+                return () => clearInterval(timer);
+            }, []);
+
+            useEffect(() => {
+                localStorage.setItem('exam_clock_offset', offset);
+                localStorage.setItem('exam_schedule_v3', JSON.stringify(schedule));
+                localStorage.setItem('exam_data_v3', JSON.stringify(examData));
+                localStorage.setItem('exam_messages_v3', JSON.stringify(messages));
+            }, [offset, schedule, examData, messages]);
+
+            const adjustedNow = useMemo(() => new Date(now.getTime() + offset), [now, offset]);
+            const currentMs = adjustedNow.getHours() * 3600000 + adjustedNow.getMinutes() * 60000 + adjustedNow.getSeconds() * 1000;
+
+            const currentSlot = useMemo(() => {
+                for (let slot of schedule) {
+                    const [sh, sm] = slot.start.split(':').map(Number);
+                    const [eh, em] = slot.end.split(':').map(Number);
+                    const startMs = sh * 3600000 + sm * 60000;
+                    const endMs = eh * 3600000 + em * 60000;
+                    if (currentMs >= startMs && currentMs < endMs) return { ...slot, startMs, endMs, duration: endMs - startMs, remaining: endMs - currentMs };
+                }
+                return null;
+            }, [schedule, currentMs]);
+
+            const progress = useMemo(() => {
+                if (!currentSlot) return { percent: 0, color: 'stroke-gray-300', text: '非考試時段' };
+                const p = ((currentMs - currentSlot.startMs) / currentSlot.duration) * 100;
+                return { percent: 100 - p, color: currentSlot.remaining < 300000 ? 'stroke-red-500' : 'stroke-green-500', text: currentSlot.label };
+            }, [currentSlot, currentMs]);
+
+            return (
+                <div className="flex flex-col h-screen w-screen bg-gray-200">
+                    <div className="h-[30vh] flex bg-white border-b-8 border-gray-300 shadow-xl">
+                        <div className="w-2/5 flex flex-col items-center justify-center border-r-4 bg-gray-50 group">
+                            <div className="text-[2vw] text-gray-400 font-black">現在時間</div>
+                            <div className="text-[8.5vw] font-black leading-none text-gray-900 tabular-nums">
+                                {adjustedNow.toLocaleTimeString('zh-TW', { hour12: false })}
+                            </div>
+                            <div className="flex gap-2 opacity-0 group-hover:opacity-100 transition-opacity">
+                                <button onClick={() => setOffset(o => o - 60000)} className="bg-white border p-1 rounded text-xs">-1分</button>
+                                <button onClick={() => setOffset(o => o + 60000)} className="bg-white border p-1 rounded text-xs">+1分</button>
+                                <button onClick={() => setOffset(0)} className="bg-red-500 text-white p-1 rounded text-xs">重置</button>
+                            </div>
+                        </div>
+                        <div className="w-3/5 flex flex-col items-center justify-center p-8 bg-white relative">
+                            <div className="absolute z-10 text-center">
+                                <div className="text-[4.5vw] font-black text-gray-800 leading-none">{progress.text}</div>
+                                <div className="text-[2vw] font-bold text-gray-400">{currentSlot ? `剩餘 ${Math.ceil(currentSlot.remaining/60000)} 分` : ''}</div>
+                            </div>
+                            <svg className="w-full h-full" viewBox="0 0 300 60">
+                                <rect x="5" y="10" width="290" height="40" rx="20" fill="none" stroke="#f3f4f6" strokeWidth="12" />
+                                <rect x="5" y="10" width="290" height="40" rx="20" fill="none" className={`track-transition ${progress.color}`} 
+                                    strokeWidth="12" pathLength="100" strokeDasharray="100" strokeDashoffset={100 - progress.percent} strokeLinecap="round" />
+                            </svg>
+                        </div>
+                    </div>
+
+                    <div className="flex-1 flex overflow-hidden">
+                        <div className="w-1/2 flex flex-col border-r-8 border-gray-300 bg-white">
+                            <div className="flex-[2.2] overflow-y-auto p-4">
+                                {schedule.map((slot, i) => slot.type === 'exam' && (
+                                    <div key={i} className={`flex items-center gap-4 p-4 rounded-2xl mb-2 bg-gray-50 border-4 ${currentSlot?.start === slot.start ? 'border-yellow-400' : 'border-transparent'}`}>
+                                        <input className="w-1/3 text-[3.5vw] font-black bg-transparent outline-none" value={examData.subjects[i] || ""} 
+                                            onChange={(e) => {
+                                                const s = [...examData.subjects]; s[i] = e.target.value; setExamData({...examData, subjects: s});
+                                            }} />
+                                        <div className="flex-1 text-right text-[3.5vw] font-black font-mono">
+                                            <input type="time" value={slot.start} onChange={(e) => { const n = [...schedule]; n[i].start = e.target.value; setSchedule(n); }} className="bg-transparent" />
+                                            ~
+                                            <input type="time" value={slot.end} onChange={(e) => { const n = [...schedule]; n[i].end = e.target.value; setSchedule(n); }} className="bg-transparent" />
+                                        </div>
+                                    </div>
+                                ))}
+                            </div>
+                            <div className="flex-1 flex flex-row">
+                                <div className="flex-1 flex flex-col items-center justify-center bg-blue-600 text-white p-2">
+                                    <div className="text-[2vw] font-bold">應到</div>
+                                    <input type="number" className="w-full text-center bg-transparent text-[6vw] font-black outline-none" value={examData.shouldArrive} onChange={(e)=>setExamData({...examData, shouldArrive: e.target.value})} />
+                                </div>
+                                <div className="flex-1 flex flex-col items-center justify-center bg-green-600 text-white p-2 border-l-4 border-white/20">
+                                    <div className="text-[2vw] font-bold">實到</div>
+                                    <input type="number" className="w-full text-center bg-transparent text-[6vw] font-black outline-none" value={examData.actualArrive} onChange={(e)=>setExamData({...examData, actualArrive: e.target.value})} />
+                                </div>
+                                <div className="flex-[1.5] flex flex-col items-center justify-center bg-red-600 text-white p-2 border-l-4 border-white/20">
+                                    <div className="text-[1.8vw] font-bold">未到名單</div>
+                                    <textarea className="w-full h-full text-center bg-transparent text-[2.5vw] font-black outline-none resize-none" value={examData.absentList} onChange={(e)=>setExamData({...examData, absentList: e.target.value})} />
+                                </div>
+                            </div>
+                        </div>
+                        <div className="w-1/2 flex flex-col bg-[#fffdf0] p-6">
+                            <div className="flex-1 flex flex-col items-center justify-center border-8 border-dashed border-yellow-200 rounded-[3rem] bg-white p-12 relative overflow-hidden">
+                                <div className="text-[6vw] font-black text-center text-gray-800 animate-fade-in">
+                                    {currentSlot ? (messages[Math.floor(adjustedNow.getSeconds()/10)%messages.length]) : "準備中"}
+                                </div>
+                            </div>
+                            <div className="h-[25%] overflow-y-auto mt-4 p-4 bg-yellow-50 rounded-2xl border-2 border-yellow-100">
+                                <button onClick={()=>setMessages([...messages, "新訊息"])} className="bg-yellow-500 text-white px-2 py-1 rounded text-xs mb-2">新增提醒</button>
+                                {messages.map((m, i) => (
+                                    <div key={i} className="flex gap-2 mb-1">
+                                        <input className="flex-1 p-1 border rounded text-sm" value={m} onChange={(e)=>{const n=[...messages]; n[i]=e.target.value; setMessages(n);}} />
+                                        <button onClick={()=>setMessages(messages.filter((_,idx)=>idx!==i))} className="text-red-400">✕</button>
+                                    </div>
+                                ))}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            );
+        };
+
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<App />);
+    </script>
+</body>
+</html>
