--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>期末考看板 - 時間垂直佈局版</title>
+    <title>期末考看板 - 橫向時間全視角版</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -20,31 +20,36 @@
         .slide-active { transform: translateX(0); opacity: 1; }
         .slide-exit { transform: translateX(-100%); opacity: 0; }
 
-        /* 垂直時間輸入框優化 */
-        .time-box {
+        /* 橫向時間條優化 */
+        .horizontal-time-bar {
             display: flex;
-            flex-direction: column;
             align-items: center;
-            justify-content: center;
-            background: rgba(0,0,0,0.03);
-            border-radius: 1rem;
-            padding: 5px 15px;
-            min-width: 100px;
+            justify-content: flex-end;
+            gap: 10px;
+            flex: 1;
         }
-        .time-part-input {
+        .time-input-group {
+            display: flex;
+            align-items: center;
+            background: rgba(0,0,0,0.04);
+            padding: 5px 15px;
+            border-radius: 15px;
+            border: 2px solid transparent;
+            transition: all 0.3s;
+        }
+        .time-input-group:focus-within {
+            border-color: #3b82f6;
+            background: white;
+        }
+        .flat-time-input {
             background: transparent;
             text-align: center;
-            width: 80px;
+            width: 100px; /* 寬度足以容納 00:00 */
             outline: none;
             font-family: "Courier New", monospace;
             font-weight: 900;
+            font-size: 3.5vw;
             line-height: 1;
-        }
-        .time-divider {
-            width: 60%;
-            height: 2px;
-            background: #cbd5e1;
-            margin: 2px 0;
         }
     </style>
 </head>
@@ -67,9 +72,9 @@
         const App = () => {
             const [now, setNow] = useState(new Date());
             const [offset, setOffset] = useState(() => Number(localStorage.getItem('exam_clock_offset')) || 0);
-            const [schedule, setSchedule] = useState(() => JSON.parse(localStorage.getItem('exam_full_v11')) || DEFAULT_SCHEDULE);
-            const [examData, setExamData] = useState(() => JSON.parse(localStorage.getItem('exam_data_v11')) || { shouldArrive: "", actualArrive: "", absentList: "" });
-            const [messages, setMessages] = useState(() => JSON.parse(localStorage.getItem('exam_messages_v11')) || ["考卷記得寫姓名座號", "檢查完再檢查或趴下休息", "有問題請舉手問老師"]);
+            const [schedule, setSchedule] = useState(() => JSON.parse(localStorage.getItem('exam_full_v12')) || DEFAULT_SCHEDULE);
+            const [examData, setExamData] = useState(() => JSON.parse(localStorage.getItem('exam_data_v12')) || { shouldArrive: "", actualArrive: "", absentList: "" });
+            const [messages, setMessages] = useState(() => JSON.parse(localStorage.getItem('exam_messages_v12')) || ["考卷記得寫姓名座號", "檢查完再檢查或趴下休息", "有問題請舉手問老師"]);
             const [msgIndex, setMsgIndex] = useState(0);
 
             useEffect(() => {
@@ -86,9 +91,9 @@
 
             useEffect(() => {
                 localStorage.setItem('exam_clock_offset', offset);
-                localStorage.setItem('exam_full_v11', JSON.stringify(schedule));
-                localStorage.setItem('exam_data_v11', JSON.stringify(examData));
-                localStorage.setItem('exam_messages_v11', JSON.stringify(messages));
+                localStorage.setItem('exam_full_v12', JSON.stringify(schedule));
+                localStorage.setItem('exam_data_v12', JSON.stringify(examData));
+                localStorage.setItem('exam_messages_v12', JSON.stringify(messages));
             }, [offset, schedule, examData, messages]);
 
             const adjustedNow = useMemo(() => new Date(now.getTime() + offset), [now, offset]);
@@ -119,23 +124,20 @@
                 return { percent: 100 - p, color: currentSlot.remaining < 300000 ? 'stroke-red-500' : 'stroke-blue-600', text: displayText };
             }, [currentSlot, currentTotalMs]);
 
-            const handleManualTimeChange = (idx, field, type, val) => {
-                const cleanVal = val.replace(/[^0-9]/g, '').slice(0, 2);
+            const handleTimeChange = (idx, field, val) => {
+                const cleanVal = val.replace(/[^0-9:]/g, '');
                 const next = [...schedule];
-                const parts = next[idx][field].split(':');
-                if (type === 'h') parts[0] = cleanVal.padStart(2, '0');
-                else parts[1] = cleanVal.padStart(2, '0');
-                next[idx][field] = parts.join(':');
+                next[idx][field] = cleanVal;
                 setSchedule(next);
             };
 
             return (
                 <div className="flex flex-col h-screen w-screen bg-gray-300">
-                    {/* 上方：進度條 */}
+                    {/* 上方進度條 */}
                     <div className="h-[25vh] flex bg-white border-b-8 border-gray-400 shadow-xl">
                         <div className="w-[35%] flex flex-col items-center justify-center bg-gray-50 border-r-4 group relative">
                             <div className="text-[1.5vw] text-gray-400 font-black tracking-widest">現在時間 (24H)</div>
-                            <div className="text-[7.5vw] font-black leading-none text-gray-900 tabular-nums">{formattedCurrentTime}</div>
+                            <div className="text-[8vw] font-black leading-none text-gray-900 tabular-nums">{formattedCurrentTime}</div>
                             <div className="absolute bottom-2 flex gap-2 opacity-0 group-hover:opacity-100 transition-opacity">
                                 <button onClick={() => setOffset(o => o - 60000)} className="bg-white border px-2 py-1 rounded text-xs font-bold shadow-sm">-1分</button>
                                 <button onClick={() => setOffset(o => o + 60000)} className="bg-white border px-2 py-1 rounded text-xs font-bold shadow-sm">+1分</button>
@@ -155,56 +157,62 @@
                     </div>
 
                     <div className="flex-1 flex overflow-hidden">
-                        {/* 左側：編輯區 */}
+                        {/* 左側編輯區 */}
                         <div className="w-[70%] flex flex-col border-r-8 border-gray-400 bg-white">
-                            <div className="flex-[1.8] flex flex-col justify-center p-4 gap-3">
+                            <div className="flex-[1.8] flex flex-col justify-around p-4 gap-2">
                                 {schedule.map((slot, i) => slot.type === 'exam' && (
-                                    <div key={i} className={`flex items-center gap-6 px-10 py-4 rounded-[3rem] border-4 transition-all ${currentSlot?.start === slot.start && currentSlot?.type === 'exam' ? 'border-yellow-400 bg-yellow-50 shadow-lg' : 'border-gray-100 bg-gray-50'}`}>
+                                    <div key={i} className={`flex items-center gap-4 px-8 py-5 rounded-[2.5rem] border-4 transition-all ${currentSlot?.start === slot.start && currentSlot?.type === 'exam' ? 'border-yellow-400 bg-yellow-50 shadow-lg' : 'border-gray-100 bg-gray-50'}`}>
+                                        {/* 科目區：寬度縮小，確保時間不被擋住 */}
                                         <input 
-                                            className="w-full text-[5.5vw] font-black bg-transparent outline-none focus:text-blue-700" 
+                                            className="w-[40%] text-[4.5vw] font-black bg-transparent outline-none focus:text-blue-700" 
                                             value={slot.subject || ""} 
                                             onChange={(e) => { const n = [...schedule]; n[i].subject = e.target.value; setSchedule(n); }}
-                                            placeholder="請輸入科目"
+                                            placeholder="輸入科目"
                                         />
                                         
-                                        {/* 垂直佈局時間輸入 */}
-                                        <div className="flex items-center gap-4">
-                                            {[ 'start', 'end' ].map((field) => (
-                                                <React.Fragment key={field}>
-                                                    <div className="time-box">
-                                                        <input className="time-part-input text-[2.5vw] text-blue-600" value={slot[field].split(':')[0]} onChange={(e)=>handleManualTimeChange(i, field, 'h', e.target.value)} />
-                                                        <div className="time-divider"></div>
-                                                        <input className="time-part-input text-[2.5vw] text-gray-800" value={slot[field].split(':')[1]} onChange={(e)=>handleManualTimeChange(i, field, 'm', e.target.value)} />
-                                                    </div>
-                                                    {field === 'start' && <span className="text-gray-300 font-black text-[2vw]">TO</span>}
-                                                </React.Fragment>
-                                            ))}
+                                        {/* 橫向時間條 */}
+                                        <div className="horizontal-time-bar">
+                                            <input 
+                                                type="text" 
+                                                value={slot.start} 
+                                                onChange={(e) => handleTimeChange(i, 'start', e.target.value)} 
+                                                className="flat-time-input text-blue-600"
+                                                placeholder="00:00"
+                                            />
+                                            <span className="text-gray-300 font-black text-[3vw]">~</span>
+                                            <input 
+                                                type="text" 
+                                                value={slot.end} 
+                                                onChange={(e) => handleTimeChange(i, 'end', e.target.value)} 
+                                                className="flat-time-input text-gray-800"
+                                                placeholder="00:00"
+                                            />
                                         </div>
                                     </div>
                                 ))}
                             </div>
                             
-                            {/* 下方：出席區域 (已下壓) */}
+                            {/* 出席區域 */}
                             <div className="h-[25vh] flex flex-row border-t-8 border-gray-200">
                                 <div className="flex-1 flex flex-col items-center justify-center bg-blue-700 text-white p-2">
-                                    <div className="text-[1.3vw] font-bold opacity-80 uppercase">應到人數</div>
-                                    <input type="number" className="w-full text-center bg-transparent text-[7.5vw] font-black outline-none" value={examData.shouldArrive} onChange={(e)=>setExamData({...examData, shouldArrive: e.target.value})} />
+                                    <div className="text-[1.3vw] font-bold opacity-80 uppercase tracking-tighter">應到人數</div>
+                                    <input type="number" className="w-full text-center bg-transparent text-[8vw] font-black outline-none" value={examData.shouldArrive} onChange={(e)=>setExamData({...examData, shouldArrive: e.target.value})} />
                                 </div>
                                 <div className="flex-1 flex flex-col items-center justify-center bg-green-700 text-white p-2 border-l-4 border-white/20">
-                                    <div className="text-[1.3vw] font-bold opacity-80 uppercase">實到人數</div>
-                                    <input type="number" className="w-full text-center bg-transparent text-[7.5vw] font-black outline-none" value={examData.actualArrive} onChange={(e)=>setExamData({...examData, actualArrive: e.target.value})} />
+                                    <div className="text-[1.3vw] font-bold opacity-80 uppercase tracking-tighter">實到人數</div>
+                                    <input type="number" className="w-full text-center bg-transparent text-[8vw] font-black outline-none" value={examData.actualArrive} onChange={(e)=>setExamData({...examData, actualArrive: e.target.value})} />
                                 </div>
                                 <div className="flex-[1.2] flex flex-col items-center justify-center bg-red-700 text-white p-2 border-l-4 border-white/20">
-                                    <div className="text-[1.3vw] font-bold opacity-80 uppercase">未到名單</div>
+                                    <div className="text-[1.3vw] font-bold opacity-80 uppercase tracking-tighter">未到座號/姓名</div>
                                     <textarea className="w-full h-full text-center bg-transparent text-[2.5vw] font-black outline-none resize-none pt-1" value={examData.absentList} onChange={(e)=>setExamData({...examData, absentList: e.target.value})} />
                                 </div>
                             </div>
                         </div>
 
-                        {/* 右側：提醒看板 */}
+                        {/* 右側提醒看板 */}
                         <div className="w-[30%] flex flex-col bg-[#fffdf0] p-4">
                             <div className="flex-1 border-4 border-dashed border-yellow-200 rounded-[2.5rem] bg-white shadow-inner mb-4 relative overflow-hidden">
-                                <div className="absolute top-5 left-8 bg-yellow-400 text-white px-4 py-1 rounded-full font-bold text-sm z-20">提醒事項</div>
+                                <div className="absolute top-5 left-8 bg-yellow-400 text-white px-4 py-1 rounded-full font-bold text-sm shadow-sm z-20">提醒事項</div>
                                 <div className="message-container">
                                     {messages.map((m, i) => {
                                         let status = i === msgIndex ? "slide-active" : (i < msgIndex ? "slide-exit" : "slide-enter");
@@ -219,8 +227,8 @@
                                 </div>
                                 {messages.map((m, i) => (
                                     <div key={i} className="flex gap-2 mb-2">
-                                        <input className="flex-1 p-2 border rounded-xl text-[13px] font-bold bg-white" value={m} onChange={(e)=>{const n=[...messages]; n[i]=e.target.value; setMessages(n);}} />
-                                        <button onClick={()=>setMessages(messages.filter((_,idx)=>idx!==i))} className="text-red-400">✕</button>
+                                        <input className="flex-1 p-2 border rounded-xl text-[13px] font-bold bg-white outline-none focus:border-yellow-400" value={m} onChange={(e)=>{const n=[...messages]; n[i]=e.target.value; setMessages(n);}} />
+                                        <button onClick={()=>setMessages(messages.filter((_,idx)=>idx!==i))} className="text-red-400 font-bold px-1">✕</button>
                                     </div>
                                 ))}
                             </div>
