--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         {/* B區：動態提醒看板與編輯區 */}
                         <div className="w-1/2 bg-[#fffdf0] flex flex-col p-6">
                             <div className="flex justify-between items-center mb-4">
-                                <h2 className="text-xl font-bold border-l-4 border-yellow-500 pl-2">看板提醒內容編輯</h2>
+                                <h2 className="text-xl font-bold border-l-4 border-yellow-500 pl-2">老師提醒</h2>
                                 <button onClick={addMessage} className="bg-yellow-500 text-white px-4 py-1 rounded-full text-sm font-bold shadow-sm hover:bg-yellow-600">+ 新增</button>
                             </div>
                             
